@@ -315,6 +315,8 @@ namespace lsp
                 BIND_PORT(pStereoSplit);
                 BIND_PORT(pScSpSource);
             }
+            if ((nMode == GM_LR) || (nMode == GM_MS))
+                SKIP_PORT("Separate channels link");
 
             // Sidechain ports
             lsp_trace("Binding sidechain ports");
@@ -724,7 +726,7 @@ namespace lsp
                 if (c->fMakeup != makeup)
                 {
                     c->fMakeup          = makeup;
-                    c->nSync           |= S_CURVE;
+                    c->nSync           |= (hyst) ? S_CURVE : S_ALL;
                 }
             }
 
