@@ -4,6 +4,7 @@
 
 === 1.0.30 ===
 * Added audio pre-mixing controls.
+* Added left/right and mid/side linking in the UI.
 
 === 1.0.29 ===
 * Added overlay support for Sidechain and Mix.
